--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,8 @@
         "laravel/ui": "~4"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=9.1",
-        "orchestra/testbench": ">=9.0",
-        "scrutinizer/ocular": "^1.9"
+        "phpunit/phpunit": ">=10.0",
+        "orchestra/testbench": ">=9.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,10 +32,7 @@
     "autoload-dev": {
         "psr-4": {
             "TakiElias\\Tablar\\Tests\\": "tests/"
-        },
-        "classmap": [
-            "tests/TestCase.php"
-        ]
+        }
     },
     "extra": {
         "branch-alias": {
