--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
         }
     ],
     "require": {
-        "illuminate/support": "~10|~11|~12",
-        "laravel/ui": "~4"
+        "illuminate/support": "~12"
     },
     "require-dev": {
         "phpunit/phpunit": ">=10.0",
         "orchestra/testbench": ">=9.0"
+    },
+    "conflict": {
+        "laravel/breeze": "*"
     },
     "autoload": {
         "psr-4": {
